# macos-fseventsd

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: fsevents_parser.rs
src/: fsevents.rs  lib.rs  parser.rs  size.rs
tests/: fseventsd_test.rs
