[package]
name = "macos-fseventsd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Library to parse macOS FsEvents"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["macos", "digital forensics", "incident response"]

[dependencies]
nom = "7.1.0"
flate2 = "1.0.22"
serde_json = "1.0.79"
serde = {version="1.0.136", features = ["derive"]}
log = "0.4.14"

[dev-dependencies]
csv = "1.1.6"