[package]
name = "macos-fseventsd"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Library to parse macOS FsEvents"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["macos", "digital forensics", "incident response"]

[dependencies]
nom = "7.1.1"
flate2 = "1.0.24"
serde_json = "1.0.85"
serde = {version="1.0.144", features = ["derive"]}
log = "0.4.17"

[dev-dependencies]
csv = "1.1.6"